--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=AMS
+APP_NAME=CPA_AMS
 APP_ENV=local
 APP_KEY=base64:yhgKpmw2xVQ+SNgVgFnBNFFc8WYhYPCaByR/9jg4HYY=
 APP_DEBUG=true
@@ -11,14 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=aws
+DB_DATABASE=attendence_management_system
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=webmail.tironotech.com
+MAIL_PORT=587
+MAIL_USERNAME=alamin@tironotech.com
+MAIL_PASSWORD=jhi_vvFl6
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=alamin@tironotech.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
